--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,8 @@ services:
     ports:
       - "7000:7000"
       - "7100:7100"
+    networks:
+      - ecomm-net
     volumes:
       - master_data:/data/master
 
@@ -30,6 +32,8 @@ services:
     ports:
       - "9001:9000"
       - "5433:5433"
+    networks:
+      - ecomm-net
     volumes:
       - tserver1_data:/data/tserver1
 
@@ -41,6 +45,8 @@ services:
     ports:
       - "9002:9000"
       - "5434:5433"
+    networks:
+      - ecomm-net
     volumes:
       - tserver2_data:/data/tserver2
 
@@ -52,10 +58,45 @@ services:
     ports:
       - "9003:9000"
       - "5435:5433"
+    networks:
+      - ecomm-net
     volumes:
       - tserver3_data:/data/tserver3
 
+  mongo:
+    image: mongo:8.0
+    container_name: mongo
+    restart: unless-stopped
+    ports:
+      - "27017:27017"
+    networks:
+      - ecomm-net
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    volumes:
+      - mongo_data:/data/db
+    
+
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo-express
+    restart: unless-stopped
+    ports:
+      - "8081:8081"
+    networks:
+      - ecomm-net
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: admin123
+    depends_on:
+      - mongo
+
 volumes:
+  mongo_data:
   tserver3_data:
   tserver2_data:
   tserver1_data:
